--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 * {
     background-color: rgb(39,41,68);
-    margin: 10px;
-    padding: 10px;
+    /* margin: 10px; */
+    /* padding: 10px; */
     box-sizing: border-box;
 }
 
@@ -12,6 +12,7 @@ font-family: sans-serif;
 }
 
 .score {
+    margin-top: 10px;
     color: rgb(224, 224, 224);
     height: 20vh;
     display: flex;
@@ -34,12 +35,14 @@ font-family: sans-serif;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    opacity: 0;
 }
 
 .intro h1 {
     font-size: 50px;
 }
-.intro button{
+.intro button,
+.options button{
     width: 150px;
     height: 50px;
     background: none;
@@ -50,7 +53,7 @@ font-family: sans-serif;
     background-repeat: 5px;
 }
 
-.match{
+.match {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -65,4 +68,17 @@ font-family: sans-serif;
 .options{
     display: flex;
     justify-content: space-around;
+    align-items: center;
+}
+
+.player-hand{
+    transform: rotateY(180deg);
+}
+div.fadeOut{
+    opacity: 0;
+    pointer-events: none;
+}
+div.fadeIn{
+    opacity: 1;
+    pointer-events: all;
 }
