--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,7 @@ font-family: sans-serif;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    opacity: 0;
+    transition: opacity 0.5s ease;
 }
 
 .intro h1 {
@@ -58,6 +58,7 @@ font-family: sans-serif;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: opacity 0.5s ease 0.5s;
 }
 .winner{
     color: wheat;
