--- a/EC/ec.css
+++ b/EC/ec.css
@@ -3,13 +3,18 @@ body{
     margin: 0;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-h1{
+h1,
+h2{
     margin: 0;
     font-weight: normal;
 }
 
 img{
     vertical-align: bottom;
+}
+
+p{
+    margin: 0;
 }
 
 .container{
@@ -68,4 +73,22 @@ header li+li {
 /* products */
 .products{
     padding: 80px 0;
+}
+.products ul{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 16px;
+}
+
+.products li {
+    outline: 2px solid lightpink;
+    width: calc((100% - 16px) / 2);
+}
+
+.products li h2 {
+    font-size: 16px;
+}
+
+.products li a{
+    display: block;
 }
